@@ -1,0 +1,5 @@
+integer = 1979;
+arr = [1, 2, 'hello'];
+
+nexl.init = '${integer=arr}';
+nexl.defaultExpression = '${arr}';
