@@ -1,0 +1,7 @@
+integer = 1979;
+arr = [1, 2, 'hello'];
+function test() {
+	nexl.set('arr', 'okokok');
+}
+
+nexl.defaultExpression = '${test();arr}';
