@@ -154,3 +154,9 @@ function discoverInstance(ifc) {
 iterationBody1 = '${_item_^U}';
 iterationBody2 = '${_key_^U}';
 iterationBody3 = '${_value_^U}';
+
+nexl.init = function () {
+	nexl.set('test', 'omglol');
+};
+
+nexl.init = '${@omg=test;}';
